@startuml

' Definition of the main classes
class Game {
    - name: String
    - board: Board
    - myPlayer: Player
    - currentPlayer: Player
    - creator: Player
    - showTargets: Boolean
    - lastTurnWasPass: Boolean
    + makeMove(row: Int, col: Int): Game?
    + passTurn(): Pair<Game, Boolean>
    + isGameOver(): Boolean
    + setTargets(on: Boolean): Game
    + isTargetsOn(): Boolean
    + toGameState(): GameState
}

class Player {
    - symbol: Char
    + other(): Player
}

class Board {
    - grid: List<List<Char>>
    + isEmpty(row: Int, col: Int): Boolean
    + isValidMove(row: Int, col: Int, player: Player): Boolean
    + applyMove(row: Int, col: Int, player: Player): Board?
    + getValidMoves(player: Player): List<Pair<Int, Int>>
    + score(): Map<Player, Int>
    + isFull(): Boolean
}

class Command {
    + execute(context: CommandContext, params: List<String>): CommandResult
    + help(): String
    + newGame(context: CommandContext.Empty, params: List<String>): CommandResult
    + joinGame(context: CommandContext.Empty, params: List<String>): CommandResult
    + playMove(context: CommandContext.WithGame, params: List<String>): CommandResult
    + passTurn(context: CommandContext.WithGame, params: List<String>): CommandResult
    + showGame(context: CommandContext.WithGame, params: List<String>): CommandResult
    + toggleTargets(context: CommandContext.WithGame, params: List<String>): CommandResult
    + exitGame(context: CommandContext, params: List<String>): CommandResult
}

class CommandContext {
    <<interface>>
    + Empty
    + WithGame
}

class CommandFactory {
    + toCommand(storage: Storage<String, GameState>, commandStr: String): Command
}

class CommandException {
    <<interface>>
    + message: String
    + InvalidParameters(command: Command, message: String)
    + Unknown(message: String)
}

class GameState {
    - board: Board
    - currentPlayer: Player
    - creator: Player
}

class Storage {
    + create(key: String, data: T)
    + read(key: String): T?
    + update(key: String, data: T)
    + delete(key: String)
}

class TextFileStorage {
    + create(key: String, data: T)
    + read(key: String): T?
    + update(key: String, data: T)
    + delete(key: String)
}

class Utils {
    + isLocal(game: Game): Boolean
    + notMyTurn(game: Game): Boolean
    + getPlayerInfo(game: Game): String?
    + saveGame(game: Game, storage: Storage<String, GameState>)
}

Game --> Board : has
Game --> Player : has
GameState *-- Board : contains
GameState *-- Player : contains
Command --> CommandContext : uses
CommandFactory --> Command : creates
CommandException <|-- Command : handles errors
Utils -- Game : provides helpers for
Storage <|-- TextFileStorage

@enduml
